equiment fix